--- a/src/app/side1.scss
+++ b/src/app/side1.scss
@@ -5,9 +5,10 @@
   max-height: 100vh;
   overflow-y: auto;
   background-color: #ffffff;
-  border-radius: 12px;
+  
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   padding: 10px;
+  overflow-y: auto;
   transition: width 0.3s ease;
   font-family: 'Montserrat', sans-serif;
 
@@ -40,12 +41,12 @@
     margin-bottom: 16px;
 
     .toggle-button {
-      background-color: #333333;
-      color: #ffffff;
+      
+      color: #000000;
       border: none;
-      border-radius: 50%;
-      width: 20px;
-      height: 20px;
+      width: 10px;
+      height: 10px;
+      font-weight: bold;
       padding: 0;
       cursor: pointer;
       font-size: 15px;
@@ -55,7 +56,6 @@
       transition: background-color 0.3s ease, transform 0.3s ease;
 
       &:hover {
-        background-color: #555555;
         transform: scale(1.1);
       }
     }
@@ -148,8 +148,6 @@
         .submodules {
           margin-top: 8px;
           padding-left: 20px;
-
-          
         }
       }
     }
@@ -270,55 +268,26 @@
   }
 }
 
-@media (max-width: 768px) {
+@media screen and (max-width: 768px) {
   .sidebar {
-    width: 100%;
-    position: absolute;
-    left: 0;
-    top: 0;
-    z-index: 2;
-    transform: translateX(-100%);
-    padding: 1rem;
-    height: 100vh;
-    overflow-y: auto;
-    background-color: #f7f7f7;
-
-    &.minimized {
-      transform: translateX(0%);
-    }
-
-    .toggle-button {
-      display: inline-block;
-      background-color: #007bff;
-      color: white;
-      padding: 0.5rem;
-      font-size: 1rem;
-      cursor: pointer;
-    }
-
-    .title {
-      font-size: 1rem;
-      margin-bottom: 1rem;
-    }
-
-    .submodule {
-      font-size: 0.9rem;
-      margin-bottom: 0.5rem;
-    }
+    width: 100%; /* Full-width sidebar for mobile */
+    height: auto; /* Auto height so it fits in mobile view */
+    position: relative;
+    z-index: 1000;
   }
 
-  .overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: 500;
-    display: none;
+  .sidebar.minimized {
+    width: 80px;
   }
 
-  .sidebar.minimized + .overlay {
-    display: block;
+  ul {
+    li {
+      padding: 12px; /* Adjust padding for better spacing */
+      text-align: center; /* Center the text for better readability */
+
+      .submodule {
+        padding-left: 10px; /* Adjusted for mobile */
+      }
+    }
   }
 }
