--- a/src/app/portalhome/portal.scss
+++ b/src/app/portalhome/portal.scss
@@ -7,7 +7,7 @@ body {
 
 .hero {
   background-color: #2b87e2;
-  border-radius: 5px;
+  // border-radius: 5px;
   padding: 20px;
   max-width: 100vw; // Ensure the hero section doesn't exceed the viewport width
 
