--- a/src/app/modules/level1/theChessboard/1.scss
+++ b/src/app/modules/level1/theChessboard/1.scss
@@ -147,7 +147,7 @@ margin-bottom: 20px; // Space below the category boxes
 .lesson-content { 
   max-width: 1200px;
   margin: 0 auto;
-  padding: 20px;
+  padding: 10px 20px;
   box-sizing: border-box;
   background-color: #ffffff;
   border-radius: 12px;
@@ -161,7 +161,7 @@ margin-bottom: 20px; // Space below the category boxes
   }
   
   h3 {
-    font-size: 24px;
+    font-size: 20px;
     color: #000000; /* Bright yet professional red */
     margin-bottom: 20px;
     text-align: center;
