--- a/src/app/portalhome/portal.scss
+++ b/src/app/portalhome/portal.scss
@@ -69,16 +69,16 @@ body {
 
         .step {
           display: flex;
-          align-items: flex-start; // Align items to the start
+          align-items: center; // Align items to the start
           background-color: #a8dadc;
           box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-          padding: 10px; // Add padding for better spacing
+          padding:5px; // Add padding for better spacing
           border-radius: 5px;
 
           .icon {
             flex-shrink: 0;
             width: 100px;
-            height: 200px;
+            height: 160px;
           }
 
           h4 {
